<resources>
    <string name="app_name">Lifestyle</string>

    <string name="title_activity_hiking">HikingActivity</string>

    <string name="usernameFilter">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_</string>
    <string name="noSpecialCharFilter">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="noSpecialCharWithSpacesFilter">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz1234567890</string>

    <string name="changePicture">Change Picture</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="finishSignup">Finish Sign Up</string>

    <string name="required_helperText">*Required</string>
    <string name="username">Username</string>
    <string name="username_helperText">*Required | Minimum of 6 characters</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="height">Height</string>
    <string name="height_feet">Feet</string>
    <string name="height_inches">Inches</string>
    <string name="height_ft">ft</string>
    <string name="height_in">in</string>
    <string name="weight">Weight</string>
    <string name="weight_detailed">Weight (lbs)</string>
    <string name="weight_lbs">lbs</string>
    <string name="sex">Sex</string>

    <string name="update">Update</string>
    <string name="applyChanges">Apply Changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>